--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,23 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer base {
+  :root {
+    --font-geist-sans: "Geist", sans-serif;
+    --font-geist-mono: "Geist Mono", monospace;
+    --font-victor-mono: "Victor Mono", monospace;
+  }
+}
+
+@layer utilities {
+  .font-geist {
+    font-family: var(--font-geist-sans);
+  }
+  .font-geistMono {
+    font-family: var(--font-geist-mono);
+  }
+  .font-victorMono {
+    font-family: var(--font-victor-mono);
+  }
+}
